homelab/manifests/base/apps/mof-database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mof-database
  labels:
    app: mof-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mof-database
  template:
    metadata:
      labels:
        app: mof-database
    spec:
      containers:
        - name: mof-database
          image: ghcr.io/jadlao/mof-database:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
