homelab/manifests/base/apps/mof-database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mof-database
spec:
  selector:
    app: mof-database
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
