homelab/manifests/base/apps/mof-database/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mof-database
spec:
  rules:
    - host: mof.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mof-database
                port:
                  number: 80
